--- a/css/style.css
+++ b/css/style.css
@@ -24,30 +24,13 @@ body{
 }
 
 /* STILE GENERALE TESTI */
-h2{
+h2, h3{
   color:white;
   padding: 15px 0;
   font-size: 1.7em;
   font-weight: 700;
 }
 
-h3, .spotify-sections h3> a{
-  color:white;
-  padding: 15px 0;
-  font-size: 1.1em;
-  font-weight: 700;
-}
-
-h4{
-  padding-bottom: 15px;
-  font-size: .9em;
-  font-weight: 600;
-}
-
-a {
-  text-decoration: none;
-  color:rgb(101, 104, 113);
-}
 
 p {
   padding-bottom: 15px;
