--- a/css/style.css
+++ b/css/style.css
@@ -6,21 +6,21 @@
 }
 
 body{
-  background-color:grey;
   font-family: 'Montserrat', sans-serif;
   font-size: 12px;
   width:100%;
   height:100vh;
-  color:rgb(101, 104, 113);
+  color:white;
 }
 
 /* - PADDING GENERALI */
 .header{
   display: flex;
   width:100%;
-  height:90px;
+  height:140px;
+  padding: 0 20px;
   align-items: center;
-  justify-content:space-around;
+  justify-content:space-between;
   color:white;
   background-color: rgb(147, 5, 5);
 }
@@ -28,6 +28,7 @@ body{
 .header > img {
   width:100px;
   height:auto;
+  filter: invert(1);
 }
 
 
@@ -37,35 +38,52 @@ body{
   height:100vh;
   align-items: center;
   justify-content:center;
-  color:white;
 }
 
 
 .train-card{
+  text-align: center;
   display: flex;
   flex-direction: column;
   max-width: 40%;
   max-height:40%;
-  background-color:rgb(169, 175, 189);
+  padding:40px;
   align-items: center;
-  border-radius: 15px;
+  border: 1px solid rgb(169, 175, 189);
+  box-shadow: black 2px 2px 8px;
+  border-radius: 12px;
   justify-content:center;
-  color:white;
+  background-color: rgba(236,236,236,.9);
 }
 
 
 /* STILE GENERALE TESTI */
-h2, h3{
-  color:white;
+
+h2{
+  color:#333;
+  padding-bottom: 25px;
+  font-size: 1.8em;
+  font-weight: 700;
+}
+
+h3{
+  color:#333;
   padding-bottom: 15px;
   font-size: 1.7em;
   font-weight: 700;
 }
 
-h2#ticket-rate{
+h3#ticketRate{
   color: rgb(147, 5, 5);
   padding-bottom: 15px;
   font-size: 2em;
+  font-weight: 700;
+}
+
+h3#ticketCost{
+  color: rgb(147, 5, 5);
+  padding-bottom: 15px;
+  font-size: 3em;
   font-weight: 700;
 }
 
